Fixed issue causing card to shift to the right if rendered content was greater in width than image width

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,10 +38,12 @@ h4{
     display: none;
     overflow: hidden;
     background-color: #f1f1f1;
-    width:auto;
+    max-width: 550px;
   }
 
+  .min-width {
+    min-width: 600px;
+  }
   
-
-
+  
   
